# image-stitching-mobile-app

./: CMakeLists.txt  README.md
android/: AndroidManifest.xml
android/res/values/: strings.xml
ios/: Project-Info.plist
qml/: Main.qml  config.json
src/: main.cpp  process.cpp  process.h
